# pixel-vectorize

./: README.md  pyproject.toml
pixel_vectorize/: __init__.py  __main__.py  module.py
tests/: __init__.py
